<resources>
    <string name="app_name">Resume Builder</string>

    <!--AboutYouActivity-->
    <string name="name_hint">Name</string>
    <string name="number_hint">Number</string>
    <string name="email_hint">Email</string>
    <string name="website_hint">Website (Optional)</string>
    <string name="address_hint">Address</string>
    <string name="summary_hint">Summary</string>
    <string name="menu_next_title">Next</string>

    <!--ExperienceActivity-->
    <string name="company_hint">Company</string>
    <string name="role_hint">Role</string>
    <string name="start_month_hint">Start Month</string>
    <string name="start_year_hint">Start Year</string>
    <string name="end_month_hint">End Month</string>
    <string name="end_year_hint">End Year</string>
    <string name="description_hint">Description</string>

    <!--EducationActivity-->
    <string name="institution_hint">Institution</string>
    <string name="major_hint">Major</string>
    <string name="gpa_hint">GPA</string>

    <!--SkillActivity-->
    <string name="skill_hint">Skill</string>

    <!--ReferenceActivity-->
    <string name="reference_name_hint">Name</string>
    <string name="reference_title_hint">Job title</string>
    <string name="reference_number_hint">Phone number</string>
    <string name="reference_email_hint">Email address</string>

    <!--Resume Templates-->
    <string-array name="resume_templates">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
