<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/company"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:inputType="textAutoComplete|textCapWords"
        android:textColor="#000000"
        android:textColorHint="#667279"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="bottom"
        android:hint="@string/company_hint"/>
    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />
    <EditText
        android:id="@+id/role"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:textColorHint="#667279"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="bottom"
        android:inputType="textAutoComplete|textCapWords"
        android:hint="@string/role_hint"/>
    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />
    <EditText
        android:id="@+id/start_month"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:textColorHint="#667279"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="bottom"
        android:inputType="textCapWords|textAutoComplete"
        android:hint="@string/start_month_hint"/>
    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />
    <EditText
        android:id="@+id/start_year"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:textColorHint="#667279"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="bottom"
        android:inputType="textCapWords|textAutoComplete"
        android:hint="@string/start_year_hint"/>
    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />
    <EditText
        android:id="@+id/end_month"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:textColorHint="#667279"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="bottom"
        android:inputType="textCapWords|textAutoComplete"
        android:hint="@string/end_month_hint"/>
    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />
    <EditText
        android:id="@+id/end_year"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:textColorHint="#667279"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="bottom"
        android:inputType="textCapWords|textAutoComplete"
        android:hint="@string/end_year_hint"/>
    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />
    <EditText
        android:id="@+id/description"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:textColorHint="#667279"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="bottom"
        android:gravity="top|start"
        android:inputType="textCapSentences|textAutoComplete|textMultiLine"
        android:maxLines="5"
        android:minLines="5"
        android:hint="@string/description_hint"/>
    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
</LinearLayout>