<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sultanofcardio.resumebuildersultanofcardio.pec.sultanofcardio.resumebuildersultanofcardio.activities.AboutYouActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="About You"/>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/edit_thumbnail"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/photo_camera" />
                <ImageView
                    android:background="@android:color/darker_gray"
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:alpha="0.8"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp">
                <EditText
                    android:id="@+id/name"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textAutoComplete|textCapWords"
                    android:textColor="#000000"
                    android:textColorHint="#667279"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_gravity="bottom"
                    android:hint="@string/name_hint"/>
                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray" />
                <EditText
                    android:id="@+id/number"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColor="#000000"
                    android:textColorHint="#667279"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_gravity="bottom"
                    android:inputType="phone"
                    android:hint="@string/number_hint"/>
                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray" />
                <EditText
                    android:id="@+id/email"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColor="#000000"
                    android:textColorHint="#667279"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_gravity="bottom"
                    android:inputType="textEmailAddress|textAutoComplete"
                    android:hint="@string/email_hint"/>
                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray" />
                <EditText
                    android:id="@+id/website"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:textColor="#000000"
                    android:textColorHint="#667279"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:hint="@string/website_hint"/>
                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray" />
                <EditText
                    android:id="@+id/address"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:textColor="#000000"
                    android:textColorHint="#667279"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:hint="@string/address_hint"/>
                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray" />
                <EditText
                    android:id="@+id/summary"
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textAutoComplete|textMultiLine"
                    android:minLines="3"
                    android:maxLines="3"
                    android:gravity="top|start"
                    android:textColor="#000000"
                    android:textColorHint="#667279"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent"
                    android:hint="@string/summary_hint"/>
                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray" />
                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
